--- a/Enigma1/index.html
+++ b/Enigma1/index.html
@@ -18,7 +18,6 @@
       margin-top: 100px;
       border: 3px solid white;
     }
-
     input[type="text"] {
       width: 500px;
       height: 50px;
@@ -49,7 +48,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Enigma.jpg" alt="enigma"> <br>
   <input id="senha" type="text" placeholder="Digite aqui"> <br>
   <button onclick="functionSend()"> Enviar </button>
-  <div id="codigo">Senha para o próximo enigma: <strong>enigmau</strong> <br> <a href="https://youtube.com">Próximo Enigma</a></div>
+  <div id="codigo">Senha para o próximo enigma: <strong>enigmau</strong> <br> <a href="https://osalamesim.github.io/O-enigma-do-pesado-Unle/Enigma2/index.html">Próximo Enigma</a></div>
 
   <script type="text/javascript">
     function functionSend() {
