--- a/Enigma2/index.html
+++ b/Enigma2/index.html
@@ -59,7 +59,7 @@
   <img src="https://i.ibb.co/FkndFGcR/Screenshot-20250622-144227.png"> <br>
   <input id="senha" type="text" placeholder="Digite aqui"> <br>
   <button onclick="functionSend()"> Enviar </button>
-  <div id="codigo">Senha para o próximo enigma: <strong>molaarmadilha</strong> <br> <a href="https://youtube.com">Próximo Enigma</a> </div>
+  <div id="codigo">Senha para o próximo enigma: <strong>molaarmadilha</strong> <br> <a href="https://osalamesim.github.io/O-enigma-do-pesado-Unle/Enigma3">Próximo Enigma</a> </div>
    
   <div id="avisoSenha">
   <h1 class="aviso"> ANTES DISSO, DIGITE A SENHA </h1> <br>
