--- a/Enigma4/index.html
+++ b/Enigma4/index.html
@@ -17,8 +17,8 @@
     img {
       margin-top: 100px;
       border: 3px solid white;
-      width: 800px;
-      height: 300px;
+      width: 676px;
+      height: 124px;
     }
 
     input[type="text"] {
@@ -56,7 +56,7 @@
 
   <h1>Fase MIAU</h1>
   <div class="frase1">Saiu da A e foi pros EUA.</div>
-  <img src="https://i.ibb.co/CpfHFf7G/barcode.png"> <br>
+  <img src="https://i.ibb.co/0pv8DDHF/barcode-1.png"> <br>
   <input id="senha" type="text" placeholder="Digite aqui"> <br>
   <button onclick="functionSend()"> Enviar </button>
   <div id="codigo">Senha para o próximo enigma: <strong>jogadordefutebol</strong> <br> <a href="https://youtube.com">Próximo Enigma</a> </div>
