--- a/Enigma4/index.html
+++ b/Enigma4/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Enigma - Fase 4</title>
+  <title>Time - Fase 4</title>
   <style>
     body {
       text-align: center;
